# lpa5_testing_exercises

./: pyproject.toml
tests/level_1/: conftest.py  test_five_title.py  test_four_bank_parser.py  test_one_gender.py  test_three_url_builder.py  test_two_date_parser.py
tests/level_2/: test_five_replace_word.py  test_four_sentiment.py  test_one_pr_url.py  test_three_first.py  test_two_square_equation.py
